tests/baselines/reference/jsFileCompilationAbstractModifier.errors.txt
error TS5055: Cannot write file 'a.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
a.js(1,1): error TS8009: The 'abstract' modifier can only be used in TypeScript files.
a.js(2,5): error TS8009: The 'abstract' modifier can only be used in TypeScript files.


!!! error TS5055: Cannot write file 'a.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
==== a.js (2 errors) ====
    abstract class c {
    ~~~~~~~~
!!! error TS8009: The 'abstract' modifier can only be used in TypeScript files.
        abstract x;
        ~~~~~~~~
!!! error TS8009: The 'abstract' modifier can only be used in TypeScript files.
    }